Bug 450425 - Timeline animation player doesn't properly respond to view changes
Summary: Timeline animation player doesn't properly respond to view changes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-17 03:55 UTC by Eoin O'Neill
Modified: 2022-04-12 05:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2022-02-17 03:55:04 UTC
SUMMARY
Note: Probably related to missing a signal disconnect when switching between views (particularly between the timeline and the animation player.) Requires either subwindow mode or multiple window instances.

STEPS TO REPRODUCE
1. Begin Playback on View A of File A
2. Switch to View B of File B

OBSERVED RESULT
Timeline (frames, etc) will correctly show frame by frame content between views, but playback will continue to move play-head erroneously. 

EXPECTED RESULT
Timeline should visually update to reflect actual state of separate view.
Comment 1 Eoin O'Neill 2022-02-18 00:47:41 UTC
Git commit e1d1a23bac0abfc7f1b5d9c477d32e689b657c48 by Eoin O'Neill.
Committed on 18/02/2022 at 00:40.
Pushed by eoinoneill into branch 'master'.

Bugfix: Playback between multiple views / canvas now works correctly

(Minus caching uploads, those need to happen even when view is no
longer selected.)
Related: bug 450424

M  +4    -0    plugins/dockers/animation/KisAnimCurvesDocker.cpp
M  +2    -0    plugins/dockers/animation/KisAnimTimelineDocker.cpp
M  +16   -9    plugins/dockers/animation/KisTimeBasedItemModel.cpp

https://invent.kde.org/graphics/krita/commit/e1d1a23bac0abfc7f1b5d9c477d32e689b657c48
Comment 2 Eoin O'Neill 2022-04-12 05:33:13 UTC
Git commit d6e6451922e0f78e823554c6cc9eebbbe7b880b5 by Eoin O'Neill.
Committed on 12/04/2022 at 05:29.
Pushed by eoinoneill into branch 'krita/5.0'.

Bugfix: Playback between multiple views / canvas now works correctly

(Minus caching uploads, those need to happen even when view is no
longer selected.)
Related: bug 450424
(cherry picked from commit e1d1a23bac0abfc7f1b5d9c477d32e689b657c48)

M  +4    -0    plugins/dockers/animation/KisAnimCurvesDocker.cpp
M  +2    -0    plugins/dockers/animation/KisAnimTimelineDocker.cpp
M  +16   -9    plugins/dockers/animation/KisTimeBasedItemModel.cpp

https://invent.kde.org/graphics/krita/commit/d6e6451922e0f78e823554c6cc9eebbbe7b880b5