Bugfix: Playback between multiple views / canvas now works correctly

(Minus caching uploads, those need to happen even when view is no
longer selected.)

CCBUG:450424
BUG:450425
(cherry picked from commit e1d1a23bac0abfc7f1b5d9c477d32e689b657c48)